--- a/itis3135/patel-enterprises.com/index.html
+++ b/itis3135/patel-enterprises.com/index.html
@@ -39,7 +39,7 @@
 
 <body>
     <header>
-        <h1> Patel Enterprises <img src="/images/P.png"></h1>
+        <h1> Patel Enterprises <img src="/images/patelenterpriseslogo.png"></h1>
     </header>
     <main>
         <h2> Patel Enterprises Services</h2>
