--- a/itis3135/project1.html
+++ b/itis3135/project1.html
@@ -34,62 +34,94 @@
         </section>
         <section id="page2">
             <h3>Site Map</h3>
+            <img src="images/sitemap.png" alt="Sitemap" id="Sitemap">
+            <figcaption id="wireframecaption">Sitemap</figcaption>
         </section>
         <h3>Home Page</h3>
         <ul>
-            <li><strong>Name: Home Page</strong></li>
-            <li><strong>Purpose: Introduce the website and provide an overview of the content and features available</strong></li>
-            <li><strong>Audience:</strong></li>
-            <li><strong>Content:</strong></li>
-            <li><strong>Is this a page where you are asking users to enter data on the page?</strong></li>
-            <li><strong>Will those data fields need any validations (if any)?</strong></li>
-            <li><strong>Hyperlinks and/or Dropdowns:</strong></li>
-            <li><strong>Actions:</strong></li>
+            <li><strong>Name:</strong> Home Page</li>
+            <li><strong>Purpose:</strong> The purpose is to introduce the website and provide an overview of the content
+                and features available.</li>
+            <li><strong>Audience:</strong> The audience is anyone who is instrested in learning the basics of Python.
+            </li>
+            <li><strong>Content: </strong>The homepage will welcome the user with a greeting and explain the course
+                curriculum. There will be a user survey form asking clients about their coding background and to submit feedback for bugs and other general feedback.</li>
+            <li><strong>Is this a page where you are asking users to enter data on the page?</strong> No data will be
+                entered on this page besides the form.</li>
+            <li><strong>Will those data fields need any validations (if any)?</strong> N/A</li>
+            <li><strong>Hyperlinks and/or Dropdowns:</strong> There won't be any hyperlinks on this page, however there
+                will be dropdowns for each webpage.</li>
+            <li><strong>Actions:</strong> Clicking on a webpage naviagtes the user to that page, so syntax would take
+                the user to that page.</li>
         </ul>
         <h3>Syntax Page</h3>
         <ul>
-            <li><strong>Name:</strong></li>
-            <li><strong>Purpose:</strong></li>
-            <li><strong>Audience:</strong></li>
-            <li><strong>Content:</strong></li>
-            <li><strong>Is this a page where you are asking users to enter data on the page?</strong></li>
-            <li><strong>Will those data fields need any validations (if any)?</strong></li>
-            <li><strong>Hyperlinks and/or Dropdowns:</strong></li>
-            <li><strong>Actions:</strong></li>
+            <li><strong>Name:</strong> Synax Page</li>
+            <li><strong>Purpose:</strong> Users can come here to learn more about Python syntax.</li>
+            <li><strong>Audience:</strong> Beginners looking to understand the language's syntax and fundamental
+                principles.</li>
+            <li><strong>Content:</strong> This page will provide interactive coding examples where users can experiment
+                with Python syntax in a code editor embedded on the page. It will also include visual representations
+                and animations to explain complex concepts in an engaging way.</li>
+            <li><strong>Is this a page where you are asking users to enter data on the page?</strong> Yes, users can
+                enter Python code snippets for practice.</li>
+            <li><strong>Will those data fields need any validations (if any)?</strong> N/A</li>
+            <li><strong>Hyperlinks and/or Dropdowns:</strong> Include links to related topics, exercises, and maybe a
+                "Syntax Cheat Sheet" for quick reference.</li>
+            <li><strong>Actions:</strong> Users can practice writing Python code, receive real-time feedback, and
+                navigate to other relevant syntax topics.</li>
         </ul>
         <h3>Variables Page</h3>
         <ul>
-            <li><strong>Name:</strong></li>
-            <li><strong>Purpose:</strong></li>
-            <li><strong>Audience:</strong></li>
-            <li><strong>Content:</strong></li>
-            <li><strong>Is this a page where you are asking users to enter data on the page?</strong></li>
-            <li><strong>Will those data fields need any validations (if any)?</strong></li>
-            <li><strong>Hyperlinks and/or Dropdowns:</strong></li>
-            <li><strong>Actions:</strong></li>
+            <li><strong>Name:</strong> Variables Page</li>
+            <li><strong>Purpose:</strong> Users can explore the concept of variables in Python.</li>
+            <li><strong>Audience:</strong> Beginner programmers who are new to Python and programming in general.</li>
+            <li><strong>Content:</strong> Provide visual representations of variables and their values, along with
+                interactive examples that allow users to change variable values and observe how it affects the program's
+                output. Include scenarios where they can use variables creatively, such as in simple games or
+                animations.</li>
+            <li><strong>Is this a page where you are asking users to enter data on the page?</strong> Yes, users can
+                create and manipulate variables in a code environment.</li>
+            <li><strong>Will those data fields need any validations (if any)?</strong> The page can validate user input
+                for correct variable assignments and operations.</li>
+            <li><strong>Hyperlinks and/or Dropdowns:</strong> Include links to related topics like data types and
+                variable naming conventions.</li>
+            <li><strong>Actions:</strong> Users can explore, create, and manipulate variables in an interactive
+                environment.
+            </li>
         </ul>
         <h3>Control Structures Page</h3>
         <ul>
-            <li><strong>Name:</strong></li>
-            <li><strong>Purpose:</strong></li>
-            <li><strong>Audience:</strong></li>
-            <li><strong>Content:</strong></li>
-            <li><strong>Is this a page where you are asking users to enter data on the page?</strong></li>
-            <li><strong>Will those data fields need any validations (if any)?</strong></li>
-            <li><strong>Hyperlinks and/or Dropdowns:</strong></li>
-            <li><strong>Actions:</strong></li>
+            <li><strong>Name:</strong> Control Structures Page</li>
+            <li><strong>Purpose:</strong> This page aims to teach beginners about control structures, such as loops and
+                conditional statements.</li>
+            <li><strong>Audience:</strong> Beginner programmers who are new to Python and programming in general.</li>
+            <li><strong>Content:</strong> Provide visually engaging flowcharts for common control structures and
+                interactive code examples.</li>
+            <li><strong>Is this a page where you are asking users to enter data on the page?</strong> Yes, users can
+                modify conditions and loops within code examples.
+            </li>
+            <li><strong>Will those data fields need any validations (if any)?</strong> Provide feedback on the correctness of user-modified code.</li>
+            <li><strong>Hyperlinks and/or Dropdowns:</strong> Include links to related topics like nested loops and if-else statements and offer a flowchart playground for users to grasp control flow and conditionals concepts.</li>
+            <li><strong>Actions:</strong> Users can experiment with control structures and understand how they affect program execution.</li>
         </ul>
         <h3>Functions Page</h3>
         <ul>
-            <li><strong>Name:</strong></li>
-            <li><strong>Purpose:</strong></li>
-            <li><strong>Audience:</strong></li>
-            <li><strong>Content:</strong></li>
-            <li><strong>Is this a page where you are asking users to enter data on the page?</strong></li>
-            <li><strong>Will those data fields need any validations (if any)?</strong></li>
-            <li><strong>Hyperlinks and/or Dropdowns:</strong></li>
-            <li><strong>Actions:</strong></li>
+            <li><strong>Name:</strong> Functions Page</li>
+            <li><strong>Purpose:</strong> This page aims to teach beginners about Python functions.</li>
+            <li><strong>Audience:</strong> Beginner programmers who are new to Python and programming in general.</li>
+            <li><strong>Content:</strong> Provide visual representations of functions and parameters, and allow users to create their own functions within the page.</li>
+            <li><strong>Is this a page where you are asking users to enter data on the page?</strong> Yes, users can write their own Python functions.</li>
+            <li><strong>Will those data fields need any validations (if any)?</strong> Validate user input for syntax and provide immediate feedback.</li>
+            <li><strong>Hyperlinks and/or Dropdowns:</strong> Include links to related topics like return values and function libraries.</li>
+            <li><strong>Actions:</strong> Users can create and experiment with functions and learn how to use parameters.</li>
         </ul>
+        <h3>Dynamic Functionality</h3>
+        <p>
+            The website will have a code editor embedded on each page, allowing users to write and execute Python code
+            directly on the page. The code editor will also provide real-time feedback on the user's code
+            and highlight syntax errors. The code editor will be implemented using the Ace Editor library or CodeMirror.
+        </p>
     </main>
     <footer>
         <div data-include="components/footer.html"></div>
